Fixing ugly glow effect on Firefox on inputs text

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -563,6 +563,8 @@ footer {
   line-height: 22px;
   border: none;
   background-color: transparent;
+  box-shadow: none;
+  outline: 0;
 }
 
 .btn {
